feat : cors 설정 제거 테스트